# sgug-rpm-tools

./: .gitignore  Makefile.am  README.md  cleanupacfiles.sh  configure.ac
build_tools/: README.md  autobuilder.sh  missing_pc.sh  specfinder.sh
src/: Makefile.am
src/sgug-rpm-tools/: Makefile.am  dependencyset.hpp  helpers.cpp  helpers.hpp  installedrpm.cpp  installedrpm.hpp  sgug_dep_engine.cpp  sgug_dep_engine.hpp  sgug_minimal_computer.cpp  sgug_world_builder.cpp  specfile.cpp  specfile.hpp
