AC_PREREQ(2.65)
AC_INIT([sgug-rpm-tools],
        [0.1.2],
        [daniel.hams@gmail.com])

AC_SUBST(ACLOCAL_AMFLAGS, "-I macros")

AC_CONFIG_SRCDIR(src)
AC_CONFIG_MACRO_DIR(macros)
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE([1.9 foreign subdir-objects])

ABI_VERSION=0.1
AC_SUBST(ABI_VERSION)
AC_DEFINE_UNQUOTED(ABI_VERSION, "$ABI_VERSION", [ABI version of the package])
PACKAGE_SUFFIX="-${ABI_VERSION}"
AC_SUBST(PACKAGE_SUFFIX)
AC_DEFINE_UNQUOTED(PACKAGE_SUFFIX, "$PACKAGE_SUFFIX", [Suffix of the package])

AC_STDC_HEADERS
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LIBTOOL
PKG_PROG_PKG_CONFIG

#AC_LANG([CXX])
AX_CXX_COMPILE_STDCXX(17,noext,mandatory)

LIBDICL_VERSION=0.1.19
AC_SUBST(LIBDICL_VERSION)

DICL_PACKAGE_DEPENDENCY_LIST="libdicl-0.1 >= $LIBDICL_VERSION"
AC_DEFINE_UNQUOTED(DICL_PACKAGE_DEPENDENCY_LIST, "$DICL_PACKAGE_DEPENDENCY_LIST", [Dicl package dependency list])

PKG_CHECK_MODULES([DICL_DEPS], [$DICL_PACKAGE_DEPENDENCY_LIST])

POPT_VERSION=1.16
AC_SUBST(POPT_VERSION)
RPM_VERSION=4.15.0
AC_SUBST(RPM_VERSION)

RPMTOOLS_PACKAGE_DEPENDENCY_LIST="popt >= $POPT_VERSION rpm >= $RPM_VERSION"
AC_DEFINE_UNQUOTED(RPMTOOLS_PACKAGE_DEPENDENCY_LIST, "$RPMSTOOLS_PACKAGE_DEPENDENCY_LIST", [RPMTools package dependency list])

PKG_CHECK_MODULES([RPMTOOLS_DEPS], [$RPMTOOLS_PACKAGE_DEPENDENCY_LIST])

AC_OUTPUT([Makefile
src/Makefile
src/sgug-rpm-tools/Makefile])
